--- a/EpicAnchors-Plugin/src/main/resources/plugin.yml
+++ b/EpicAnchors-Plugin/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: 1
 depend: [Arconix]
 main: com.songoda.epicanchors.EpicAnchorsPlugin
 author: songoda
+api-version: 1.13
 commands:
   EpicAnchors:
     description: I have no idea.
