--- a/EpicAnchors-Plugin/src/main/resources/plugin.yml
+++ b/EpicAnchors-Plugin/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: EpicAnchors
 description: EpicAnchors
 version: 1.1.2
 depend: [Arconix]
+softdepend: [EpicSpawners, Towny, RedProtect, Kingdoms, PlotsSquared, GriefPrevention, USkyBlock, ASkyBlock, WorldGuard, Factions, Vault]
 main: com.songoda.epicanchors.EpicAnchorsPlugin
 author: songoda
 api-version: 1.13
