--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,3 +9,4 @@ build:
     name: "EpicAnchors"
     paths:
       - "/builds/Songoda/EpicAnchors/target/*.jar"
+      - "/builds/Songoda/EpicAnchors/Read_this_before_your_first_use.txt"
