--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>com.songoda</groupId>
             <artifactId>epicspawners</artifactId>
-            <version>LATEST</version>
+            <version>5.7.1</version>
         </dependency>
     </dependencies>
 </project>
