--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>com</groupId>
             <artifactId>plotsquared</artifactId>
-            <version>RELEASE</version>
+            <version>BREAKING</version>
         </dependency>
         <dependency>
             <groupId>com.palmergames.bukkit</groupId>
