--- a/EpicAnchors-Plugin/src/main/resources/plugin.yml
+++ b/EpicAnchors-Plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: EpicAnchors
 description: EpicAnchors
-version: 1.1.12
+version: maven-version-number
 softdepend: [EpicSpawners, Towny, RedProtect, Kingdoms, PlotsSquared, GriefPrevention, USkyBlock, ASkyBlock, WorldGuard, Factions, Vault]
 main: com.songoda.epicanchors.EpicAnchorsPlugin
 author: songoda
