--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <groupId>com.songoda</groupId>
     <artifactId>EpicAnchors</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.1.12</version>
+    <version>maven-version-number</version>
     <build>
         <defaultGoal>clean package</defaultGoal>
         <plugins>
