--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
         <dependency>
             <groupId>com.songoda</groupId>
             <artifactId>epicspawners</artifactId>
-            <version>5.7.1</version>
+            <version>6-pre4</version>
         </dependency>
     </dependencies>
 </project>
