--- a/pom.xml
+++ b/pom.xml
@@ -4,31 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <version>maven-version-number</version>
     <build>
-        <defaultGoal>clean package</defaultGoal>
+        <defaultGoal>clean install</defaultGoal>
+        <finalName>EpicAnchors-${project.version}</finalName>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.7</version>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>EpicAnchors-API/src/main/java</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <version>3.6.1</version>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -68,13 +50,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>EpicAnchors-Plugin/src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <sourceDirectory>EpicAnchors-Plugin/src/main/java</sourceDirectory>
     </build>
     <repositories>
         <repository>
@@ -86,7 +61,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.14</version>
+            <version>1.14.1</version>
         </dependency>
         <dependency>
             <groupId>com.songoda</groupId>
@@ -94,64 +69,10 @@
             <version>1</version>
         </dependency>
         <dependency>
-            <groupId>org</groupId>
-            <artifactId>kingdoms</artifactId>
-            <version>13.0.9</version>
-        </dependency>
-        <dependency>
             <groupId>net.milkbowl</groupId>
             <artifactId>vault</artifactId>
             <version>1.7.1</version>
-        </dependency>
-        <dependency>
-            <groupId>me.ryanhamshire</groupId>
-            <artifactId>GriefPrevention</artifactId>
-            <version>16.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sk89q</groupId>
-            <artifactId>worldedit</artifactId>
-            <version>7.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sk89q</groupId>
-            <artifactId>worldguard</artifactId>
-            <version>7.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com</groupId>
-            <artifactId>plotsquared</artifactId>
-            <version>BREAKING</version>
-        </dependency>
-        <dependency>
-            <groupId>com.palmergames.bukkit</groupId>
-            <artifactId>towny</artifactId>
-            <version>0.93.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.wasteofplastic</groupId>
-            <artifactId>askyblock</artifactId>
-            <version>3.0.6.8</version>
-        </dependency>
-        <dependency>
-            <groupId>us.talabrek</groupId>
-            <artifactId>ultimateskyblock</artifactId>
-            <version>2.7.2</version>
-        </dependency>
-        <dependency>
-            <groupId>me.markeh</groupId>
-            <artifactId>factionsframework</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>br.net.fabiozumbi12</groupId>
-            <artifactId>RedProtect</artifactId>
-            <version>7.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.songoda</groupId>
-            <artifactId>epicspawners</artifactId>
-            <version>6-pre4</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
