--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,10 @@
             <version>1.7.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.songoda</groupId>
+            <artifactId>epicspawners</artifactId>
+            <version>6-pre4</version>
+        </dependency>
     </dependencies>
 </project>
