--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: EpicAnchors
 description: EpicAnchors
 version: maven-version-number
 softdepend: [EpicSpawners, Towny, RedProtect, Kingdoms, PlotsSquared, GriefPrevention, USkyBlock, ASkyBlock, WorldGuard, Factions, Vault]
-main: com.songoda.epicanchors.EpicAnchorsPlugin
+main: com.songoda.epicanchors.EpicAnchors
 author: songoda
 api-version: 1.13
 commands:
