--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,10 @@
             <artifactId>epicspawners</artifactId>
             <version>6-pre4</version>
         </dependency>
+        <dependency>
+            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
+            <artifactId>holographicdisplays-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 </project>
