--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,11 @@
             <artifactId>holographicdisplays-api</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.tnemc</groupId>
+            <artifactId>Reserve</artifactId>
+            <version>0.1.3.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
