--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,10 @@
             <version>0.1.3.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.black_ixx</groupId>
+            <artifactId>playerpoints</artifactId>
+            <version>2.1.4</version>
+        </dependency>
     </dependencies>
 </project>
