--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <groupId>com.songoda</groupId>
     <artifactId>EpicAnchors</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.4.10</version>
+    <version>1.4.10b</version>
     <build>
         <defaultGoal>clean install</defaultGoal>
         <finalName>EpicAnchors-${project.version}</finalName>
