--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <groupId>com.songoda</groupId>
     <artifactId>EpicAnchors</artifactId>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.4.10b</version>
+    <version>1.4.10c</version>
     <build>
         <defaultGoal>clean install</defaultGoal>
         <finalName>EpicAnchors-${project.version}</finalName>
@@ -89,10 +89,6 @@
     </build>
     <repositories>
         <repository>
-            <id>private</id>
-            <url>http://repo.songoda.com/repository/private/</url>
-        </repository>
-        <repository>
             <id>public</id>
             <url>https://repo.songoda.com/repository/public/</url>
         </repository>
@@ -105,7 +101,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.16.1</version>
+            <version>1.16.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
