--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
         <java.release>8</java.release>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <sonar.projectKey>songoda_EpicAnchors</sonar.projectKey>
+        <sonar.organization>songoda</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
     </properties>
 
     <issueManagement>
