--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,7 +2,7 @@ name: 'Build & Test'
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, development ]
   pull_request:
     types: [ opened, synchronize, reopened ]
 
@@ -14,7 +14,7 @@ jobs:
       # Setup Java
       - uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: 16
           distribution: adopt
 
       # Checkout project files
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: EpicAnchors-artifacts
-          path: ./modules/epicanchors-plugin/target/EpicAnchors-*.jar
+          path: ./target/EpicAnchors-*.jar
 
   sonarcloud:
     name: SonarCloud
