--- a/pom.xml
+++ b/pom.xml
@@ -6,30 +6,8 @@
 
     <groupId>com.songoda</groupId>
     <artifactId>EpicAnchors</artifactId>
-    <packaging>pom</packaging>
     <version>2.0.0-ALPHA</version>
     <!-- Run 'mvn versions:set -DgenerateBackupPoms=false -DnewVersion=X.Y.Z-DEV' to update version recursively -->
-
-    <modules>
-        <module>modules/epicanchors-api</module>
-        <module>modules/epicanchors-plugin</module>
-
-        <module>modules/nms/epicanchors-v1_16_R3</module>
-        <module>modules/nms/epicanchors-v1_16_R2</module>
-        <module>modules/nms/epicanchors-v1_16_R1</module>
-        <module>modules/nms/epicanchors-v1_15_R1</module>
-        <module>modules/nms/epicanchors-v1_14_R1</module>
-        <module>modules/nms/epicanchors-v1_13_R2</module>
-        <module>modules/nms/epicanchors-v1_13_R1</module>
-        <module>modules/nms/epicanchors-v1_12_R1</module>
-        <module>modules/nms/epicanchors-v1_11_R1</module>
-        <module>modules/nms/epicanchors-v1_10_R1</module>
-        <module>modules/nms/epicanchors-v1_9_R2</module>
-        <module>modules/nms/epicanchors-v1_9_R1</module>
-        <module>modules/nms/epicanchors-v1_8_R3</module>
-        <module>modules/nms/epicanchors-v1_8_R2</module>
-        <module>modules/nms/epicanchors-v1_8_R1</module>
-    </modules>
 
     <name>EpicAnchors</name>
     <description>Allow your players to keep chunks loaded for a limited amount of time for a cost.</description>
@@ -71,8 +49,83 @@
                     <release>${java.release}</release>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.3.0-SNAPSHOT</version>
+
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+
+                        <configuration>
+                            <finalName>${project.name}-${project.version}</finalName>
+
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <minimizeJar>true</minimizeJar>
+
+                            <relocations>
+                                <relocation>
+                                    <pattern>com.songoda.core</pattern>
+                                    <shadedPattern>com.songoda.epicanchors.core</shadedPattern>
+                                </relocation>
+
+                                <relocation>
+                                    <pattern>epicanchors.nms</pattern>
+                                    <shadedPattern>com.songoda.epicanchors.nms</shadedPattern>
+                                </relocation>
+                            </relocations>
+
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+
+                                    <excludes>
+                                        <exclude>META-INF/**</exclude>
+                                        <exclude>LICENSE</exclude>
+                                        <exclude>LICENSE.**</exclude>
+                                    </excludes>
+                                </filter>
+
+                                <filter>
+                                    <artifact>org.jetbrains:annotations</artifact>
+                                    <excludes>
+                                        <exclude>**</exclude>
+                                    </excludes>
+                                </filter>
+
+                                <filter>
+                                    <artifact>com.songoda:epicanchors-v*</artifact>
+                                    <includes>
+                                        <include>**</include>
+                                    </includes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>apache.snapshots</id>
+            <url>https://repository.apache.org/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <repositories>
         <repository>
@@ -87,6 +140,20 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.songoda</groupId>
+            <artifactId>SongodaCore</artifactId>
+            <version>2.5.7</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Dev dependencies -->
         <dependency>
             <groupId>org.jetbrains</groupId>
