--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.songoda</groupId>
     <artifactId>EpicAnchors</artifactId>
-    <version>2.0.0-ALPHA</version>
+    <version>2.1.0</version>
     <!-- Run 'mvn versions:set -DgenerateBackupPoms=false -DnewVersion=X.Y.Z-DEV' to update version recursively -->
 
     <name>EpicAnchors</name>
