Fix git connection URL in pom.xml
https://maven.apache.org/scm/git.html

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <scm>
         <url>https://github.com/songoda/EpicAnchors</url>
-        <connection>scm:git:git:github.com/songoda/EpicAnchors.git</connection>
+        <connection>scm:git:git://github.com/songoda/EpicAnchors.git</connection>
     </scm>
 
     <build>
