--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,16 @@
 # Please see the documentation for all configuration options:
-# https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+# https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
 version: 2
 updates:
-  - package-ecosystem: "maven"
-    directory: "/"
-    target-branch: "development"
+  - package-ecosystem: maven
+    directory: /
+    target-branch: development
     schedule:
-      interval: "monthly"
-    ignore:
-      - dependency-name: "com.songoda:SongodaCore"
+      interval: monthly
 
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    target-branch: "development"
+  - package-ecosystem: github-actions
+    directory: /
+    target-branch: development
     schedule:
-      interval: "monthly"
+      interval: monthly
