--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-/target/
-
+##
 # JetBrains IDEs
+##
 /.idea/
 *.iml
+
+##
+# Maven
+##
+/target/
+
+dependency-reduced-pom.xml
+
+##
+# Misc.
+##
+.DS_Store
