--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ softdepend:
   - HolographicDisplays
   - Vault
 
-author: Songoda
+author: Craftaro
 authors: [ SpraxDev ]
 website: ${project.url}
 
