--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,6 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <sonar.projectKey>songoda_EpicAnchors</sonar.projectKey>
-        <sonar.organization>songoda</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
     </properties>
@@ -64,8 +62,6 @@
 
                         <configuration>
                             <finalName>${project.name}-${project.version}</finalName>
-
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <minimizeJar>true</minimizeJar>
 
                             <relocations>
@@ -121,7 +117,7 @@
 
     <repositories>
         <repository>
-            <id>spigotmc-repo</id>
+            <id>SpigotMC</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
 
