--- a/pom.xml
+++ b/pom.xml
@@ -55,18 +55,18 @@
                 <executions>
                     <execution>
                         <phase>package</phase>
-
                         <goals>
                             <goal>shade</goal>
                         </goals>
 
                         <configuration>
                             <finalName>${project.name}-${project.version}</finalName>
+                            <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
                             <minimizeJar>true</minimizeJar>
 
                             <relocations>
                                 <relocation>
-                                    <pattern>com.songoda.core</pattern>
+                                    <pattern>com.craftaro.core</pattern>
                                     <shadedPattern>com.songoda.epicanchors.core</shadedPattern>
                                 </relocation>
                             </relocations>
@@ -87,6 +87,14 @@
                                     <excludes>
                                         <exclude>**</exclude>
                                     </excludes>
+                                </filter>
+
+                                <filter>
+                                    <artifact>com.craftaro:CraftaroCore</artifact>
+                                    <excludeDefaults>false</excludeDefaults>
+                                    <includes>
+                                        <include>**/nms/v*/**</include>
+                                    </includes>
                                 </filter>
                             </filters>
                         </configuration>
@@ -124,9 +132,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.songoda</groupId>
-            <artifactId>SongodaCore</artifactId>
-            <version>2.6.20</version>
+            <groupId>com.craftaro</groupId>
+            <artifactId>CraftaroCore</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
