Change the project structure to allow a dedicated API module to exist

--- a/EpicAnchors-Plugin/src/main/resources/plugin.yml
+++ b/EpicAnchors-Plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: ${project.name}
-description: ${project.description}
+name: ${project.parent.name}
+description: ${project.parent.description}
 version: ${project.version}
 api-version: 1.13
 
@@ -11,7 +11,7 @@ softdepend:
 
 author: Craftaro
 authors: [ SpraxDev ]
-website: ${project.url}
+website: ${project.parent.url}
 
 commands:
   EpicAnchors:
