--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
-##
-# JetBrains IDEs
-##
+## JetBrains IDEs
 /.idea/
 *.iml
 
-##
-# Maven
-##
-/target/
-
+## Maven
+/**/target/
 dependency-reduced-pom.xml
 
-##
-# Misc.
-##
+## Misc.
 .DS_Store
