--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.songoda</groupId>
-    <artifactId>EpicAnchors</artifactId>
+    <groupId>com.craftaro</groupId>
+    <artifactId>EpicAnchors-Parent</artifactId>
+    <packaging>pom</packaging>
     <version>2.2.7</version>
+    <!-- Run 'mvn versions:set -DgenerateBackupPoms=false -DnewVersion=X.Y.Z-DEV' to update version recursively -->
+
+    <modules>
+        <module>EpicAnchors-API</module>
+        <module>EpicAnchors-Plugin</module>
+    </modules>
 
     <name>EpicAnchors</name>
     <description>Allow your players to keep chunks loaded for a limited amount of time for a cost.</description>
     <url>https://songoda.com/marketplace/product/31</url>
 
     <properties>
-        <java.version>1.8</java.version>
-        <java.release>8</java.release>
+        <maven.compiler.release>8</maven.compiler.release>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -32,107 +40,14 @@
         <connection>scm:git:git://github.com/craftaro/EpicAnchors.git</connection>
     </scm>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-
-                    <release>${java.release}</release>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.4.1</version>
-
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-
-                        <configuration>
-                            <finalName>${project.name}-${project.version}</finalName>
-
-                            <shadedArtifactAttached>false</shadedArtifactAttached>
-                            <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
-                            <minimizeJar>true</minimizeJar>
-
-                            <relocations>
-                                <relocation>
-                                    <pattern>com.craftaro.core</pattern>
-                                    <shadedPattern>com.songoda.epicanchors.core</shadedPattern>
-                                </relocation>
-                            </relocations>
-
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-
-                                    <excludes>
-                                        <exclude>META-INF/**</exclude>
-                                        <exclude>LICENSE</exclude>
-                                        <exclude>LICENSE.**</exclude>
-                                    </excludes>
-                                </filter>
-
-                                <filter>
-                                    <artifact>com.craftaro:CraftaroCore</artifact>
-                                    <excludeDefaults>false</excludeDefaults>
-                                    <includes>
-                                        <include>**/nms/v*/**</include>
-                                    </includes>
-                                </filter>
-                            </filters>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-    </build>
-
     <repositories>
         <repository>
-            <id>SpigotMC</id>
+            <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-
-        <repository>
-            <id>songoda-public</id>
-            <url>https://repo.songoda.com/repository/public/</url>
         </repository>
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.8-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.craftaro</groupId>
-            <artifactId>CraftaroCore</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
         <!-- Dev dependencies -->
         <dependency>
             <groupId>org.jetbrains</groupId>
