--- a/EpicAnchors-API/pom.xml
+++ b/EpicAnchors-API/pom.xml
@@ -51,6 +51,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.craftaro</groupId>
+            <artifactId>CraftaroCore</artifactId>
+            <version>${craftaro.coreVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.8-R0.1-SNAPSHOT</version>
