--- a/EpicAnchors-Plugin/pom.xml
+++ b/EpicAnchors-Plugin/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>com.craftaro</groupId>
             <artifactId>CraftaroCore</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>${craftaro.coreVersion}</version>
             <scope>compile</scope>
         </dependency>
 
