--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.craftaro</groupId>
     <artifactId>EpicAnchors-Parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.2.7</version>
+    <version>3.0.0-SNAPSHOT</version>
     <!-- Run 'mvn versions:set -DgenerateBackupPoms=false -DnewVersion=X.Y.Z-DEV' to update version recursively -->
 
     <modules>
