GitHub Actions: Temporarily removes Deployment to the maven repository
We have a new template for compiling projects and publishing them but it hasn't really been designed
with API modules in mind yet and needs some smaler adjustments before being used in all projects.
I don't want to manually update all projects if I change the template workflow file.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,14 +52,14 @@ jobs:
           name: ${{ github.event.repository.name }}
           path: ${{ env.DEPLOYMENT_ARTIFACT_DIR }}/${{ env.DEPLOYMENT_ARTIFACT_SELECTOR }}
 
-      - name: Deploy to Maven repo
-        if: ${{ github.event_name == 'push' }}
-        uses: craftaro/GH-Commons/.github/actions/maven_deploy@master
-        with:
-          repository_url: ${{ secrets.MAVEN_REPO_URL_RELEASES }}
-          repository_url_snapshots: ${{ secrets.MAVEN_REPO_URL_SNAPSHOTS }}
-          maven_pom_path: ${{ env.DEPLOYMENT_POM_PATH }}
-          maven_out_dir: ${{ env.DEPLOYMENT_ARTIFACT_DIR }}
+#      - name: Deploy to Maven repo
+#        if: ${{ github.event_name == 'push' }}
+#        uses: craftaro/GH-Commons/.github/actions/maven_deploy@master
+#        with:
+#          repository_url: ${{ secrets.MAVEN_REPO_URL_RELEASES }}
+#          repository_url_snapshots: ${{ secrets.MAVEN_REPO_URL_SNAPSHOTS }}
+#          maven_pom_path: ${{ env.DEPLOYMENT_POM_PATH }}
+#          maven_out_dir: ${{ env.DEPLOYMENT_ARTIFACT_DIR }}
 
   discord_webhook:
     name: Send Discord Webhook
