--- a/EpicAnchors-Plugin/pom.xml
+++ b/EpicAnchors-Plugin/pom.xml
@@ -36,7 +36,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>com.craftaro.core</pattern>
-                                    <shadedPattern>com.songoda.epicanchors.core</shadedPattern>
+                                    <shadedPattern>com.craftaro.epicanchors.core</shadedPattern>
                                 </relocation>
                             </relocations>
 
