--- a/EpicAnchors-Plugin/pom.xml
+++ b/EpicAnchors-Plugin/pom.xml
@@ -27,7 +27,7 @@
                         </goals>
 
                         <configuration>
-                            <finalName>${project.name}-${project.version}</finalName>
+                            <finalName>${project.parent.name}-${project.version}</finalName>
 
                             <shadedArtifactAttached>false</shadedArtifactAttached>
                             <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
