pom.xml/plugin.yml: Updates Marketplace Link from Songoda to Craftaro

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <name>EpicAnchors</name>
     <description>Allow your players to keep chunks loaded for a limited amount of time for a cost.</description>
-    <url>https://songoda.com/marketplace/product/31</url>
+    <url>https://craftaro.com/marketplace/product/31</url>
 
     <properties>
         <craftaro.coreVersion>3.0.0-SNAPSHOT</craftaro.coreVersion>
