--- a/EpicAnchors-Plugin/pom.xml
+++ b/EpicAnchors-Plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.craftaro</groupId>
         <artifactId>EpicAnchors-Parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0-b2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>EpicAnchors-Plugin</artifactId>
